--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flores.html" style="color: #fff;">Natalia</a>
+            <a href="flores.html" style="color: #fff;">Nataly</a>
         </button>
     </div>
 
 </body>
+
 
 </html>
